--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-weather-app",
+  "homepage": "https://ihorkoi.github.io/react-weather-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
