--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-weather-app",
-  "homepage": "https://ihorkoi.github.io/react-weather-appnpm ",
+  "homepage": "https://ihorkoi.github.io/react-weather-app ",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -41,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
