--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "react-weather-app",
-  "homepage": "https://ihorkoi.github.io/react-weather-app ",
+  "homepage": "https://ihorkoi.github.io/react-weather-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^1.5.1",
     "gh-pages": "^6.0.0",
+    "modern-normalize": "^2.0.0",
     "nanoid": "^5.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "styled-components": "^6.0.8",
     "webpack": "^1.14.0"
   },
   "scripts": {
