--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "axios": "^1.5.1",
+    "dotenv": "^16.3.1",
     "gh-pages": "^6.0.0",
     "modern-normalize": "^2.0.0",
     "nanoid": "^5.0.1",
