add some css, move api key to env vars

--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "nanoid": "^5.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.0.8",
     "webpack": "^1.14.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-dotenv && react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
+    "build": "react-dotenv && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
@@ -44,6 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "react-dotenv": {
+    "whitelist": ["API_KEY"]
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
