--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
+    "react-icons": "^5.0.1",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "styled-components": "^6.0.8",
     "webpack": "^1.14.0"
   },
@@ -47,7 +49,9 @@
     ]
   },
   "react-dotenv": {
-    "whitelist": ["API_KEY"]
+    "whitelist": [
+      "API_KEY"
+    ]
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
