--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-weather-app",
-  "homepage": "https://ihorkoi.github.io/react-weather-app",
+  "homepage": "https://ihorkoi.github.io/weather-wize",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +9,7 @@
     "gh-pages": "^6.0.0",
     "modern-normalize": "^2.0.0",
     "nanoid": "^5.0.1",
+    "notiflix": "^3.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
