--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-weather-app",
-  "homepage": "https://ihorkoi.github.io/weather-wize",
+  "homepage": "https://ihorkoi.github.io/weather-wise",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
